--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -138,6 +138,14 @@ a{
     overflow-y: scroll;
 }
 
+.content-admin-products{
+    position: relative;
+}
+
+.header-table{
+    position: relative;
+}
+
 .table-title{
     padding: 10px 0;
     border-bottom: 1px solid var(--graynhe);
@@ -352,11 +360,18 @@ a{
     
 }
 
-.logout{
-    display: flex;
-    padding: 20px;
-    border: 1px solid var(--black);
+.overview-content-toggle, .overview-content-toggle--2{
+    position: absolute;
+    top:-5px;
+    right: 0;
+    font-size: 20px;
+    background-color: transparent;
+    border: none;
     cursor: pointer;
+    padding: 10px;
+    transition: transform 0.3s ease;
 }
+
+
 
 
