--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,6 +40,7 @@ html{
     --black-light:#212529;
     --graynhe:  #ccc;
     --dividergrey: rgba(0, 0, 0, 0.062);
+    --sucess:#a7c957;
 }
 
 ul{
@@ -3028,5 +3029,68 @@ h3{
     .page-order-summary {
         padding: 10px;
     }
+}
+
+/*================= Order Status ============*/
+
+.status-order{
+    margin-top: 40px;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-status-order{
+    width: 400px;
+    min-height: 500px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+}
+
+.status-success, .status-fail{
+    width: 100%;
+}
+
+.img-status{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.img-status > h1{
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.info-order-status{
+    margin-top: 50px;
+}
+
+.table-info-order {
+    width: 100%;
+    
+}
+
+.table-info-order td{
+    text-align: right;
+}
+
+.table-info-order td,
+.table-info-order th{
+    padding: 5px;
+}
+
+.continue-shopping-btn{
+    width: 100%;
+    padding: 10px;
+    background-color: var(--black);
+    color: var(--white);
+    margin-top: 30px;
 }
 
