--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -14,7 +14,7 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: #f1f1f1; /* Màu nền track */
+    background: transparent; /* Màu nền track */
     border-radius: none;
   }
 
@@ -188,7 +188,7 @@ a{
     color: var(--white);
 }
 
-.table-data-products, .table-data-store{
+.table-data-products, .table-data-store, .table-data-order{
     height: 300px;
     overflow-y: scroll;
 }
@@ -370,6 +370,105 @@ a{
     cursor: pointer;
     padding: 10px;
     transition: transform 0.3s ease;
+}
+
+/*================= ORDERS ================*/
+
+.receipt-order{
+    display: flex;
+    gap: 10px;
+}
+
+.receipt-container{
+    width: 600px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    padding: 20px;
+}
+
+.receipt-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--graynhe);
+}
+
+.receipt-header h2{
+    margin: 0;
+    font-size: 20px;
+}
+
+.order-items{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow-y: scroll;
+    height: 420px;
+}
+
+.order-items-container{
+    display: flex;
+    gap: 10px;
+    margin-top: 30px;
+}
+
+.order-items-container img{
+    width: 100px;
+    height: 100px;
+    background-color: var(--greylightnhe);
+}
+
+.order-items-container h3{
+    font-size: 20px;
+    width: 300px;
+    height: 50px;
+}
+
+.order-items-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.order-feature{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    flex: 1;
+    gap: 10px;
+    height: 200px;
+    padding: 20px 50px;
+    
+}
+
+.order-feature h2{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--graynhe);
+}
+
+.order-feature form{
+    width: 100%;
+}
+
+.order-feature form button{
+    width: 100%;
+    padding:10px;
+    background-color: transparent;
+    box-shadow: none;
+    font-weight: bold;
+}
+
+.print-receipt{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    width: 100%;
+    background-color: var(--black);
+    color: var(--white);
+    font-weight: bold;
+    padding: 10px;
 }
 
 
