--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -153,7 +153,7 @@ a{
     font-size: 15px;
 }
 
-.feature-product-table{
+.feature-product-table, .feature-user-table{
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
