--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,21 +73,129 @@ a{
     display: none;
 }
 
+.navbar-container.active {
+    opacity: 1;
+    visibility: visible;
+}
+
 .navbar-site{
     position: fixed;
-    width: 577px;
+    width: 300px;
     height: 100%;
     z-index: 1001;
     top: 0px;
-    right: 0;
+    left: 0;
     background-color: white;
     padding: 20px;
     display: none;
-    animation: slideInRight 0.3s ease;
+    animation: slideInLeft 0.3s ease;
 }
 
+.navbar-site.active{
+    transform: translateX(0);
+}
 
+.navbar-site-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 
+.navbar-site-header-left{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.navbar-site-header-left-logo-active {
+    display: inline-block;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.navbar-site-header-left-logo-active.active{
+    content: "";
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-bottom: 3px solid #000;
+}
+
+.navbar-site-header-left-logo{
+    width: 30px;
+    height: auto;
+}
+
+.navbar-site-header-right{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.close-navbar {
+    background: none;
+    border: none;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+.navbar-logo img {
+    height: 24px;
+}
+
+.navbar-glass, .navbar-cart {
+    background: none;
+    border: none;
+    position: relative;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.navbar-cart {
+    margin-left: 10px;
+}
+
+.amount-cart {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    padding: 2px 6px;
+    border-radius: 50%;
+}
+
+.sidebar-menu {
+    list-style: none;
+    padding: 0;
+    margin-top: 30px;
+}
+
+.sidebar-menu li {
+    margin: 16px 0;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.build-regimen-btn {
+    width: 100%;
+    background: none;
+    border: 1px solid black;
+    padding: 10px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.sidebar-menu > li{
+    font-weight: 600;
+}
+
+.sidebar-menu-new-content{
+    display: none;
+}
 
 
 
