--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -7,6 +7,10 @@
     
 }
 
+body{
+    overflow: hidden;
+}
+
 ::-webkit-scrollbar {
     width: 3px; /* Chiều rộng của thanh cuộn dọc */
     height: 8px; /* Chiều cao của thanh cuộn ngang */
@@ -153,7 +157,7 @@ a{
     font-size: 15px;
 }
 
-.feature-product-table, .feature-user-table{
+.feature-product-table, .feature-user-table, .feature-order-table{
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
