--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1727,6 +1727,12 @@ h3{
     font-size: 11px;
 }
 
+.message-error{
+    font-size: 15px;
+    color: red;
+    padding: 10px;
+}
+
 @media only screen and (max-width:431px){
     .signup-wrapper{
         width: 100%;
