--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2908,11 +2908,23 @@ h3{
 }
 
 #feedback{
+    overflow-y: scroll;
     width: 500px;
-    height: 100%;
+    height: 90%;
     border: 1px solid var(--black);
     background-color: var(--white);
     position: relative;
+    margin-top: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#feedback > h3 {
+    margin: 0;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--black);
 }
 
 .close-form-feedback{
@@ -2924,6 +2936,73 @@ h3{
     border: none;
     padding: 5px;
 }
+
+.overall-rating-feedback{
+    margin-top: 10px;
+}
+
+.rating-feedback{
+    margin-top: 10px;
+    display: flex;
+    gap: 5px;
+}
+
+.rating-feedback i{
+    font-size: 15px;
+    padding: 20px;
+    border: 1px solid var(--black);
+    border-radius: 5px;
+}
+
+.select-personal{
+    display: flex;
+    gap: 10px;
+}
+
+.select-personal > select{
+    padding: 10px;
+}
+
+.gallery-feedback{
+    width: 100%;
+    
+}
+
+.dropzone {
+    width: 100%;
+    height: 100px;
+    padding: 30px;
+    border: 2px dashed var(--graynhe);
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .dropzone.dragover {
+    background: #eef;
+  }
+  .preview{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    margin-top: 10px;
+  }
+  .preview img {
+    width: 100%;
+    margin: 5px;
+    object-fit: cover;
+  }
+
+  .btn-submit-feedback{
+    width: 100%;
+    height: 50px;
+    background-color: var(--black);
+    box-shadow: none;
+    border: none;
+    color: var(--white);
+    padding: 10px;
+  }
 
 
 @media only screen and (max-width:431px){
