--- a/public/assets/css/404.css
+++ b/public/assets/css/404.css
@@ -1,139 +1,242 @@
-*,
-:before,
-:after {
-  box-sizing: border-box;
-}
-
+@import url(https://fonts.googleapis.com/css?family=opensans:500);
 body {
-  display: flex;
-  align-items: center;
-  background: #e3f2fd;
-  min-width: 275px;
-  height: 100vh;
-  margin: 0 10vw;
+  background: #33cc99;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  max-height: 700px;
   overflow: hidden;
-  color: #138ff2;
-  font-family: Roboto;
 }
-
-.wrapper {
-  flex-grow: 2;
-  width: 40vw;
-  max-width: 500px;
-  margin: 0 auto;
-}
-
-h1 {
-  margin: 0;
-  font-size: 6em;
-  font-weight: 100;
-}
-
-p {
-  width: 95%;
-  font-size: 1.5em;
-  line-height: 1.4;
-}
-
-.buttons {
-  white-space: nowrap;
-  display: inline-block;
-}
-
-span {
-  display: block;
-  text-transform: uppercase;
-  color: #b9ddfb;
-  letter-spacing: 1.5px;
+.c {
   text-align: center;
+  display: block;
+  position: relative;
+  width: 80%;
+  margin: 100px auto;
+}
+._404 {
+  font-size: 220px;
+  position: relative;
+  display: inline-block;
+  z-index: 2;
+  height: 250px;
+  letter-spacing: 15px;
+}
+._1 {
+  text-align: center;
+  display: block;
+  position: relative;
+  letter-spacing: 12px;
+  font-size: 4em;
+  line-height: 80%;
+}
+._2 {
+  text-align: center;
+  display: block;
+  position: relative;
+  font-size: 20px;
+}
+.text {
+  font-size: 70px;
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  margin: 19px 0px 0px 0px;
+  /* top: 256.301px; */
+  z-index: 3;
+  width: 100%;
+  line-height: 1.2em;
+  display: inline-block;
 }
 
-a {
-  display: inline-block;
-  padding: 0.8em 1em;
-  margin-right: 1em;
-  margin-bottom: 1em;
-  border: 3px solid #b9ddfb;
-  color: #138ff2;
-  font-weight: 500;
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: 0.2em;
+.btn {
+  background-color: rgb(255, 255, 255);
   position: relative;
-  overflow: hidden;
-  transition: 0.3s;
+  display: inline-block;
+  width: 358px;
+  padding: 5px;
+  z-index: 5;
+  font-size: 25px;
+  margin: 0 auto;
+  color: #33cc99;
+  text-decoration: none;
+  margin-right: 10px;
 }
-a:hover {
-  color: #e3f2fd;
+.right {
+  float: right;
+  width: 60%;
 }
-a:hover:before {
-  top: 0;
+
+hr {
+  padding: 0;
+  border: none;
+  border-top: 5px solid #fff;
+  color: #fff;
+  text-align: center;
+  margin: 0px auto;
+  width: 420px;
+  height: 10px;
+  z-index: -10;
 }
-a:before {
-  content: "";
-  background: #138ff2;
-  height: 100%;
-  width: 100%;
+
+hr:after {
+  content: "\2022";
+  display: inline-block;
+  position: relative;
+  top: -0.75em;
+  font-size: 2em;
+  padding: 0 0.2em;
+  background: #33cc99;
+}
+
+.cloud {
+  width: 350px;
+  height: 120px;
+
+  background: #fff;
+  background: linear-gradient(top, #fff 100%);
+  background: -webkit-linear-gradient(top, #fff 100%);
+  background: -moz-linear-gradient(top, #fff 100%);
+  background: -ms-linear-gradient(top, #fff 100%);
+  background: -o-linear-gradient(top, #fff 100%);
+
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+
   position: absolute;
-  top: -100%;
-  left: 0;
-  transition: 0.3s;
+  margin: 120px auto 20px;
+  z-index: -1;
+  transition: ease 1s;
+}
+
+.cloud:after,
+.cloud:before {
+  content: "";
+  position: absolute;
+  background: #fff;
   z-index: -1;
 }
 
-.space {
-  width: 75px;
-  height: calc(50vh + 37.5px);
-  border-top-left-radius: 37.5px;
-  border-top-right-radius: 37.5px;
-  overflow: hidden;
-  margin: calc(50vh - 37.5px) auto 0 auto;
-  position: relative;
-  pointer-events: none;
-  -webkit-transform: translateZ(0);
+.cloud:after {
+  width: 100px;
+  height: 100px;
+  top: -50px;
+  left: 50px;
+
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
 }
 
-.blackhole {
-  border: 5px solid #1674d1;
-  height: 75px;
-  width: 75px;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.blackhole:after {
-  content: "";
-  height: calc(100% + 10px);
-  width: calc(100% + 10px);
-  border: 5px solid #1674d1;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  z-index: 5;
-  transform: rotate(45deg);
+.cloud:before {
+  width: 180px;
+  height: 180px;
+  top: -90px;
+  right: 50px;
+
+  border-radius: 200px;
+  -webkit-border-radius: 200px;
+  -moz-border-radius: 200px;
 }
 
-.ship {
-  height: 150px;
-  width: 55px;
-  margin-left: 10px;
-  background: url("https://cbwconline.com/IMG/Codepen/Space%20Ship.svg") center/contain no-repeat;
-  animation: blackhole 4s infinite linear;
-  position: absolute;
-  bottom: -150px;
+.x1 {
+  top: -50px;
+  left: 100px;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3);
+  opacity: 0.9;
+  -webkit-animation: moveclouds 15s linear infinite;
+  -moz-animation: moveclouds 15s linear infinite;
+  -o-animation: moveclouds 15s linear infinite;
 }
 
-@keyframes blackhole {
-  to {
-    transform: translateY(-100vh);
+.x1_5 {
+  top: -80px;
+  left: 250px;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3);
+  -webkit-animation: moveclouds 17s linear infinite;
+  -moz-animation: moveclouds 17s linear infinite;
+  -o-animation: moveclouds 17s linear infinite;
+}
+
+.x2 {
+  left: 250px;
+  top: 30px;
+  -webkit-transform: scale(0.6);
+  -moz-transform: scale(0.6);
+  transform: scale(0.6);
+  opacity: 0.6;
+  -webkit-animation: moveclouds 25s linear infinite;
+  -moz-animation: moveclouds 25s linear infinite;
+  -o-animation: moveclouds 25s linear infinite;
+}
+
+.x3 {
+  left: 250px;
+  bottom: -70px;
+
+  -webkit-transform: scale(0.6);
+  -moz-transform: scale(0.6);
+  transform: scale(0.6);
+  opacity: 0.8;
+
+  -webkit-animation: moveclouds 25s linear infinite;
+  -moz-animation: moveclouds 25s linear infinite;
+  -o-animation: moveclouds 25s linear infinite;
+}
+
+.x4 {
+  left: 470px;
+  botttom: 20px;
+
+  -webkit-transform: scale(0.75);
+  -moz-transform: scale(0.75);
+  transform: scale(0.75);
+  opacity: 0.75;
+
+  -webkit-animation: moveclouds 18s linear infinite;
+  -moz-animation: moveclouds 18s linear infinite;
+  -o-animation: moveclouds 18s linear infinite;
+}
+
+.x5 {
+  left: 200px;
+  top: 300px;
+
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  transform: scale(0.5);
+  opacity: 0.8;
+
+  -webkit-animation: moveclouds 20s linear infinite;
+  -moz-animation: moveclouds 20s linear infinite;
+  -o-animation: moveclouds 20s linear infinite;
+}
+
+@-webkit-keyframes moveclouds {
+  0% {
+    margin-left: 1000px;
+  }
+  100% {
+    margin-left: -1000px;
   }
 }
-@media (max-width: 600px) {
-  body {
-    margin: 0 5vw;
+@-moz-keyframes moveclouds {
+  0% {
+    margin-left: 1000px;
+  }
+  100% {
+    margin-left: -1000px;
+  }
+}
+@-o-keyframes moveclouds {
+  0% {
+    margin-left: 1000px;
+  }
+  100% {
+    margin-left: -1000px;
   }
 }
