--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -165,6 +165,10 @@ a{
     font-size: 15px;
 }
 
+h2{
+    font-size: 15px;
+}
+
 .feature-product-table, .feature-user-table, .feature-order-table{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -200,8 +204,8 @@ a{
     color: var(--white);
 }
 
-.table-data-products, .table-data-store, .table-data-order{
-    height: 300px;
+.table-data-products, .table-data-store, .table-data-order,.table-data-comments{
+    max-height: 300px;
     overflow-y: scroll;
 }
 
@@ -393,12 +397,26 @@ a{
 .profile-flex{
     display: flex;
     gap: 10px;
+    margin-bottom: 10px ;
+    flex-wrap: wrap;
 }
 
-.profile-flex p{
-    font-size: 15px;
-    border-right: 1px solid var(--graynhe);
-    padding-right: 5px;
+.profile-flex > .form-group{
+    width: 200px;
+}
+
+.feature-manage-user{
+    display: flex;
+    gap: 10px;
+}
+
+.feature-manage-user button{
+    width: 200px;
+    background-color: transparent;
+    box-shadow: none;
+    border: 1px solid var(--black);
+    padding: 10px 20px;
+    
 }
 
 /*================= ORDERS ================*/
