--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -171,7 +171,10 @@ h2{
     font-size: 15px;
 }
 
-.feature-product-table, .feature-user-table, .feature-order-table{
+.feature-product-table, 
+.feature-user-table, 
+.feature-order-table, 
+.feature-stock-table{
     margin-top: 20px;
     margin-bottom: 20px;
     display: flex;
