responsive of page home

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -187,13 +187,6 @@
     }
 }
 
-
-
-
-
-
-
-
 /*******************************************************/
 /********************* PAGE HOME ***********************/
 /*******************************************************/
@@ -538,4 +531,24 @@
     }
 }
 
+/*******************************************************/
+/******************** Page SHOP **********************/
+/*******************************************************/
 
+/* IPAD */
+@media only screen and (max-width:770px){
+    .shop-main-content {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .filter-products-shop{
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    .products-list {
+        flex: 0 0 75%;
+        max-width: 75%;
+    }
+}
